# python-basics

./: .gitignore  README.md  pyproject.toml
src/: assert.py  dicts.py  errors.py  functions.py  lambdas.py  lists.py  logical.py  loops.py  numbers.py  sets.py  strings.py  tuples.py
